--- a/app/src/main/res/layout/fragment_promo.xml
+++ b/app/src/main/res/layout/fragment_promo.xml
@@ -5,6 +5,7 @@
     android:padding="15dp">
 
     <android.support.v7.widget.RecyclerView
+        android:id="@+id/recV_promo"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
