--- a/app/src/main/res/layout/fragment_aktivitas.xml
+++ b/app/src/main/res/layout/fragment_aktivitas.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent"
     android:id="@+id/aktivitas_fragment"
     android:padding="15dp">
     >
 
     <android.support.v7.widget.RecyclerView
+        android:id="@+id/recV_aktv"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/recV_aktv">
+        android:layout_height="match_parent">
 
 
     </android.support.v7.widget.RecyclerView>
 
-</RelativeLayout>
+</FrameLayout>
