--- a/app/src/main/res/layout/list_activity.xml
+++ b/app/src/main/res/layout/list_activity.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="40dp">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
@@ -10,7 +11,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginBottom="5dp"
+            android:layout_margin="5dp"
             android:background="@color/cardview_light_background"
             android:orientation="horizontal">
 
@@ -24,10 +25,10 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="5dp"
                 android:gravity="center"
-                android:orientation="vertical"
-                android:padding="25dp">
+                android:paddingLeft="25dp"
+                android:layout_gravity="center"
+                android:orientation="vertical">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -56,7 +57,7 @@
 
                     <TextView
                         android:id="@+id/tv_noOrder"
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="20dp"
                         android:text="32839201" />
                 </LinearLayout>
@@ -75,7 +76,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="20dp"
-                        android:text=" - " />
+                        android:text=" s/d " />
 
                     <TextView
                         android:id="@+id/tv_tglAkhir"
