--- a/app/src/main/res/layout/list_promo.xml
+++ b/app/src/main/res/layout/list_promo.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="40dp">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
@@ -10,7 +11,10 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginBottom="5dp"
             android:background="@color/cardview_light_background"
             android:orientation="vertical"
             android:padding="5dp">
