--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -26,8 +26,8 @@
                     android:layout_gravity="center"
                     android:layout_width="150dp"
                     android:layout_height="150dp"
-                    android:src="@drawable/logo_oxy"
-                    app:srcCompat="@drawable/logo_oxy"
+                    android:src="@drawable/logo_new"
+                    app:srcCompat="@drawable/logo_new"
                     />
                 <LinearLayout
                     android:layout_width="230dp"
