--- a/app/src/main/res/layout/fragment_jadwal.xml
+++ b/app/src/main/res/layout/fragment_jadwal.xml
@@ -137,12 +137,12 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal">
+
                         <EditText
-                            android:layout_width="300dp"
-                            android:layout_height="50dp"
-                            android:backgroundTint="#FF7C06"
                             android:id="@+id/input_promo"
-                            />
+                            android:layout_width="250dp"
+                            android:layout_height="50dp"
+                            android:backgroundTint="#FF7C06" />
                         <Button
                             android:layout_width="60dp"
                             android:layout_height="40dp"
