--- a/app/src/main/res/layout/list_activity.xml
+++ b/app/src/main/res/layout/list_activity.xml
@@ -20,7 +20,7 @@
                 android:layout_height="90dp"
                 android:layout_gravity="center"
                 android:layout_margin="5dp"
-                android:src="@drawable/logo_oxy" />
+                android:src="@drawable/logo_new" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -65,7 +65,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:orientation="vertical">
 
                     <TextView
                         android:id="@+id/tv_tglAwal"
