--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="navigation_view">
 
-    <group android:checkableBehavior="single">
+    <group>
         <item
             android:id="@+id/nav_user_info"
             android:icon="@drawable/user"
@@ -17,10 +17,11 @@
                 android:id="@+id/nav_settings"
                 android:icon="@drawable/pengaturan"
                 android:title="Pengaturan" />
+
             <item
-                android:id="@+id/nav_about"
-                android:icon="@drawable/tentang"
-                android:title="Tentang" />
+                android:id="@+id/nav_logout"
+                android:icon="@drawable/ic_arrow_back_black_24dp"
+                android:title="Keluar" />
         </menu>
     </item>
 
